--- a/coniferous.html
+++ b/coniferous.html
@@ -63,7 +63,7 @@
         <div class="col_1"></div>
         <div class="col_2"></div>
         <template>
-            <section>
+            <section class="planter">
                 <article class="plants_by_1">
                     <img src="img/baggrund_1.png" alt="">
                     <div class="des"><a href="plant.html">PLANT</a></div>
