--- a/index.html
+++ b/index.html
@@ -34,12 +34,10 @@
     </header>
 
     <main>
-        <img src="img/lovskov.webp" alt="Løvskov">
+        <img src="img/lovskov.webp" alt="Løvskov" class="løvskov">
+        <img src="img/lov_desktop.jpg" alt="" class="lov_desk">
 
-        <div class="forside_text">
-            <h1 class="forsideh1">VILD MAD</h1>
-            <img src="img/blok.webp" alt="" class="blok_forside">
-        </div>
+        <h1 class="forsideh1">VILD MAD</h1>
 
 
         <h2 class="forsideh2">Forrests</h2>
