--- a/plant.html
+++ b/plant.html
@@ -25,48 +25,49 @@
             </div>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="">Contact</a></li>
-
+                <li><a href="coniferous.html">Coniferous forest</a></li>
+                <li><a href="deciduous.html">Deciduous forest</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-        <article>
-            <div class="grid1">
-                <div class="section">
-                        <img src="img/stick.png" alt="" class="foreground_2">
-                        <img src="img/flower_1.png" alt="" class="foreground_3">
-                </div>
-                <h1 class="name">DANDELION</h1>
-                <img src="img/dadelion.png" alt="" id="profile_img">
+    <article>
+        <div class="grid1">
+            <div class="section">
+                <img src="img/stick.png" alt="" class="foreground_2">
+                <img src="img/flower_1.png" alt="" class="foreground_3">
             </div>
-            <div class="buttons">
-                <button type="button" class="sea">SEASONS</button>
-                <button type="button" class="loc">LOCATIONS</button>
+            <h1 class="name">DANDELION</h1>
+            <img src="img/dadelion.png" alt="" id="profile_img">
+        </div>
+        <div class="buttons">
+            <button type="button" class="sea">SEASONS</button>
+            <button type="button" class="loc">LOCATIONS</button>
+        </div>
+        <div class="grid_maintext">
+            <div>
+                <h2>Description</h2>
+                <p class="desc"></p>
             </div>
-            <div class="grid_maintext">
-                 <div>
-                    <h2>Description</h2>
-                    <p class="desc"></p>
-                </div>
-                <div>
-                    <h2>How to spot:</h2>
-                    <p class="how_to_spot"></p>
-                </div>
-                <div>
-                    <h2>How to pick:</h2>
-                    <p class="how_to_pick"></p>
-                </div>
-                <div id="where">
-                    <h2>Where to find:</h2>
-                    <p class="where_to_find"></p>
-                </div>
-                <div id="when">
-                    <h2>When to find:</h2>
-                    <p class="when_to_find"></p>
-                </div>
-                <div class="grid1-1-1-1"></div>
+            <div>
+                <h2>How to spot:</h2>
+                <p class="how_to_spot"></p>
             </div>
-        </article>
+            <div>
+                <h2>How to pick:</h2>
+                <p class="how_to_pick"></p>
+            </div>
+            <div id="where">
+                <h2>Where to find:</h2>
+                <p class="where_to_find"></p>
+            </div>
+            <div id="when">
+                <h2>When to find:</h2>
+                <p class="when_to_find"></p>
+            </div>
+            <div class="grid1-1-1-1"></div>
+        </div>
+    </article>
     <footer>
         <div class="foot">
             <div class="project">
