--- a/coniferous.html
+++ b/coniferous.html
@@ -24,10 +24,10 @@
                 <div class="bar"></div>
             </div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="coniferous.html">Coniferous forest</a></li>
+                <li><a href="deciduous.html">Deciduous forest</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
