linker til skovene

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <h2 class="forsideh2">Forrests</h2>
 
         <div class="skove">
-            <img src="img/skov_1.webp" alt="Skov">
-            <img src="img/skov_2.webp" alt="Skov">
+            <a href="deciduous.html"> <img src="img/skov_1.webp" alt="Skov"></a>
+            <a href="coniferous.html"><img src="img/skov_2.webp" alt="Skov"></a>
         </div>
 
     </main>
