--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1 class="forsideh1">VILD MAD</h1>
 
 
-        <h2 class="forsideh2">Forrests</h2>
+        <h2 class="forsideh2">Forests</h2>
 
         <div class="skove">
             <a href="deciduous.html"> <img src="img/skov_1.webp" alt="Skov"></a>
