--- a/coniferous.html
+++ b/coniferous.html
@@ -43,9 +43,11 @@
     </div>
     <div class="text_felt">
         <h1 class="name">CONIFEROUS FOREST</h1>
-        <p class="information">INFORMATION ABOUT FORREST HERE Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Doloremque ad nam, voluptatem sed consectetur expedita non ullam repellendus iste autem exercitationem
-            mollitia animi eos nobis accusantium vero quam cumque ab?</p>
+        <p class="information">Coniferous forests in Denmark are cultivated, often to prevent sand from drifting or
+            eroding. Well adapted to sandy, nutrient-poor soil, conifers transform the forest floor by dropping their
+            needles. The high acidity of spruce needles curbs earthworms and aids the decomposition of organic material,
+            making the floor of a coniferous forest perfect for mushrooms. You can also find some berries and herbs that
+            have adapted to the acidic, nutrient-poor environment.</p>
     </div>
 
     <div class="plants_selector">
