--- a/deciduous.html
+++ b/deciduous.html
@@ -44,10 +44,10 @@
 
     <div class="text_felt">
         <h1 class="name">DECIDUOUS FOREST</h1>
-        <p class="information">INFORMATION ABOUT FORREST HERE Lorem ipsum dolor sit amet consectetur adipisicing
-            elit.
-            Doloremque ad nam, voluptatem sed consectetur expedita non ullam repellendus iste autem exercitationem
-            mollitia animi eos nobis accusantium vero quam cumque ab?</p>
+        <p class="information">The tree canopy blocks out much of the sunlight in deciduous forests, especially in
+            summer, making the foraging opportunities rather sparse. Spring and fall, however, offer many edible
+            options, from early wild herbs like ramson and sweet woodruff, to late summer's selection of berries and
+            edible flowers, to autumn's wealth of mushrooms, fruit, and nuts.</p>
     </div>
 
 
