--- a/plant.html
+++ b/plant.html
@@ -30,43 +30,76 @@
             </ul>
         </nav>
     </header>
-        <article>
-            <div class="grid1">
-                <div class="section">
-                        <img src="img/stick.png" alt="" class="foreground_2">
-                        <img src="img/flower_1.png" alt="" class="foreground_3">
+    <article>
+        <div class="grid1">
+            <div class="section">
+                <img src="img/stick.png" alt="" class="foreground_2">
+                <img src="img/flower_1.png" alt="" class="foreground_3">
+            </div>
+            <h1 class="name">DANDELION</h1>
+            <img src="img/dadelion.png" alt="" id="profile_img">
+        </div>
+        <div class="buttons">
+            <button type="button" class="sea">SEASONS</button>
+            <button type="button" class="loc">LOCATIONS</button>
+        </div>
+        <div class="grid_maintext">
+            <div class="icon_grid">
+                <div class="icon_container">
+                    <img src="img/beskrivelse_icon.webp" alt="beskrivelse">
                 </div>
-                <h1 class="name">DANDELION</h1>
-                <img src="img/dadelion.png" alt="" id="profile_img">
-            </div>
-            <div class="buttons">
-                <button type="button" class="sea">SEASONS</button>
-                <button type="button" class="loc">LOCATIONS</button>
-            </div>
-            <div class="grid_maintext">
-                 <div>
+                <div>
                     <h2>Description</h2>
                     <p class="desc"></p>
+                </div>
+            </div>
+
+            <div class="icon_grid">
+                <div class="icon_container">
+                    <img src="img/spot_icon.webp" alt="">
                 </div>
                 <div>
                     <h2>How to spot:</h2>
                     <p class="how_to_spot"></p>
                 </div>
+            </div>
+
+            <div class="icon_grid">
+                <div class="icon_container">
+                    <img src="img/pick_icon.webp" alt="">
+                </div>
                 <div>
                     <h2>How to pick:</h2>
                     <p class="how_to_pick"></p>
                 </div>
+            </div>
+
+            <div class="icon_grid">
+                <div class="icon_container">
+                    <img src="img/find_icon.webp" alt="">
+                </div>
                 <div id="where">
-                    <h2>Where to find:</h2>
-                    <p class="where_to_find"></p>
+                    <div>
+                        <h2>Where to find:</h2>
+                        <p class="where_to_find"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="icon_grid">
+                <div class="icon_container">
+                    <img src="img/when_icon.webp" alt="">
                 </div>
                 <div id="when">
-                    <h2>When to find:</h2>
-                    <p class="when_to_find"></p>
+                    <div>
+                        <h2>When to find:</h2>
+                        <p class="when_to_find"></p>
+                    </div>
                 </div>
-                <div class="grid1-1-1-1"></div>
             </div>
-        </article>
+        </div>
+        <div class="grid1-1-1-1"></div>
+        </div>
+    </article>
     <footer>
         <div class="foot">
             <div class="project">
