--- a/coniferous.html
+++ b/coniferous.html
@@ -53,25 +53,25 @@
         <h1>PLANTS</h1>
         <h2>SORTED BY</h2>
         <div class="selector">
-        <div>
-        <label for="month"></label>
-        <select id="month" name="month">
-            <option value="-1">Select month</option>
-            <option value="0">January</option>
-            <option value="1">February</option>
-            <option value="2">March</option>
-            <option value="3">April</option>
-            <option value="4">May</option>
-            <option value="5">June</option>
-            <option value="6">July</option>
-            <option value="7">August</option>
-            <option value="8">September</option>
-            <option value="9">October</option>
-            <option value="10">November</option>
-            <option value="11">December</option>
-        </select>
-    </div>
-    <div id="items-container"></div>
+            <div>
+                <label for="month"></label>
+                <select id="month" name="month">
+                    <option value="-1">Select month</option>
+                    <option value="0">January</option>
+                    <option value="1">February</option>
+                    <option value="2">March</option>
+                    <option value="3">April</option>
+                    <option value="4">May</option>
+                    <option value="5">June</option>
+                    <option value="6">July</option>
+                    <option value="7">August</option>
+                    <option value="8">September</option>
+                    <option value="9">October</option>
+                    <option value="10">November</option>
+                    <option value="11">December</option>
+                </select>
+            </div>
+            <div id="items-container"></div>
             <h2 class="alphabetical_button">a-z</h2>
         </div>
     </div>
@@ -84,7 +84,7 @@
         <template>
             <section class="planter">
                 <article class="plants_by_1">
-                    <img src="img/baggrund_1.png" alt="">
+                    <img src="img/baggrund_1.png" alt="" class="billede_prøve">
                     <div class="des"><a href="plant.html">PLANT</a></div>
                 </article>
             </section>
