--- a/plant.html
+++ b/plant.html
@@ -45,27 +45,59 @@
             <button type="button" class="loc">LOCATIONS</button>
         </div>
         <div class="grid_maintext">
-            <div>
-                <h2>Description</h2>
-                <p class="desc"></p>
+            <div class="icon_grid">
+                <div class="icon_container">
+                    <img src="img/beskrivelse_icon.webp" alt="beskrivelse">
+                </div>
+                <div>
+                    <h2>Description</h2>
+                    <p class="desc"></p>
+                </div>
             </div>
-            <div>
-                <h2>How to spot:</h2>
-                <p class="how_to_spot"></p>
+
+            <div class="icon_grid">
+                <div class="icon_container">
+                    <img src="img/spot_icon.webp" alt="">
+                </div>
+                <div>
+                    <h2>How to spot:</h2>
+                    <p class="how_to_spot"></p>
+                </div>
             </div>
-            <div>
-                <h2>How to pick:</h2>
-                <p class="how_to_pick"></p>
+
+            <div class="icon_grid">
+                <div class="icon_container">
+                    <img src="img/pick_icon.webp" alt="">
+                </div>
+                <div>
+                    <h2>How to pick:</h2>
+                    <p class="how_to_pick"></p>
+                </div>
             </div>
-            <div id="where">
-                <h2>Where to find:</h2>
-                <p class="where_to_find"></p>
+            <div class="icon_grid">
+                <div class="icon_container">
+                    <img src="img/find_icon.webp" alt="">
+                </div>
+                <div id="where">
+                    <div>
+                        <h2>Where to find:</h2>
+                        <p class="where_to_find"></p>
+                    </div>
+                </div>
             </div>
-            <div id="when">
-                <h2>When to find:</h2>
-                <p class="when_to_find"></p>
+            <div class="icon_grid">
+                <div class="icon_container">
+                    <img src="img/when_icon.webp" alt="">
+                </div>
+                <div id="when">
+                    <div>
+                        <h2>When to find:</h2>
+                        <p class="when_to_find"></p>
+                    </div>
+                </div>
             </div>
-            <div class="grid1-1-1-1"></div>
+        </div>
+        <div class="grid1-1-1-1"></div>
         </div>
     </article>
     <footer>
