--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <img src="img/lov_desktop.jpg" alt="" class="lov_desk">
 
         <h1 class="forsideh1">VILD MAD</h1>
-        <img src="img/blok.webp" alt="" class="foreground_forside">
+        <!-- <img src="img/blok.webp" alt="" class="foreground_forside"> -->
 
         <h2 class="forsideh2">Forests</h2>
 
