--- a/plant.html
+++ b/plant.html
@@ -38,7 +38,7 @@
                 <img src="img/flower_1.png" alt="" class="foreground_3">
             </div>
             <h1 class="name">DANDELION</h1>
-            <img src="img/dadelion.png" alt="" id="profile_img">
+            <img src="" alt="" id="profile_img">
         </div>
         <div class="buttons">
             <button type="button" class="sea">SEASONS</button>
