rettelse i burger-menu og indsat logo

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <div class="bar"></div>
             </div>
             <ul class="menu">
+                <img src="img/logo.png" alt="" id="logo">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="coniferous.html">Coniferous forest</a></li>
                 <li><a href="deciduous.html">Deciduous forest</a></li>
@@ -32,16 +33,10 @@
             </ul>
         </nav>
     </header>
-
     <main>
         <img src="img/lovskov.webp" alt="Løvskov" class="løvskov">
-        <img src="img/lov_desktop.jpg" alt="" class="lov_desk">
-
         <h1 class="forsideh1">VILD MAD</h1>
-        <!-- <img src="img/blok.webp" alt="" class="foreground_forside"> -->
-
         <h2 class="forsideh2">Forests</h2>
-
         <div class="skove">
             <a href="deciduous.html"> <img src="img/skov_1.webp" alt="Skov"></a>
             <a href="coniferous.html"><img src="img/skov_2.webp" alt="Skov"></a>
@@ -55,7 +50,6 @@
                 <p>A project initiated by</p>
                 <img src="img/mad.png" alt="">
             </div>
-
             <div class="partner">
                 <p>Developed in partnership with</p>
                 <div class="partner_pic">
