footer med nyhed

--- a/index.html
+++ b/index.html
@@ -52,53 +52,55 @@
     </main>
 
     <footer>
-      <div class="foot">
-        <div class="project">
-          <p>A project initiated by</p>
-          <img src="img/mad.png" alt="" />
-        </div>
-        <div class="partner">
-          <p>Developed in partnership with</p>
-          <div class="partner_pic">
-            <img src="img/byhøst.png" alt="" />
-            <img src="img/naturvejleder.png" alt="" />
-            <img src="img/gojoin.png" alt="" />
-            <img src="img/tombola.png" alt="" />
+      <div class="footer_flex">
+        <div class="foot">
+          <div class="project">
+            <p>A project initiated by</p>
+            <img src="img/mad.png" alt="" />
           </div>
-          <div class="partner_pic_2">
-            <img src="img/friluft.png" alt="" />
-            <img src="img/supertusch.png" alt="" />
+          <div class="partner">
+            <p>Developed in partnership with</p>
+            <div class="partner_pic">
+              <img src="img/byhøst.png" alt="" />
+              <img src="img/naturvejleder.png" alt="" />
+              <img src="img/gojoin.png" alt="" />
+              <img src="img/tombola.png" alt="" />
+            </div>
+            <div class="partner_pic_2">
+              <img src="img/friluft.png" alt="" />
+              <img src="img/supertusch.png" alt="" />
+            </div>
           </div>
         </div>
-      </div>
-      <div class="nyhedsbrev">
-        <form>
-          Nyhedsbrev
-          <select name="liste">
-            <option value="">Vælg profil</option>
-            <option value="studerende">Studerende</option>
-            <option value="underviser">Underviser</option>
-          </select>
-          <label for="navn">Fulde navn</label>
-          <input
-            placeholder="fx Jens Jensen"
-            type="text"
-            id="navn"
-            name="navn"
-            required
-          />
+        <div class="nyhedsbrev">
+          <form>
+            Nyhedsbrev
+            <select name="liste">
+              <option value="">Vælg profil</option>
+              <option value="studerende">Studerende</option>
+              <option value="underviser">Underviser</option>
+            </select>
+            <label for="navn">Fulde navn</label>
+            <input
+              placeholder="fx Jens Jensen"
+              type="text"
+              id="navn"
+              name="navn"
+              required
+            />
 
-          <label for="email">E-mail</label>
-          <input
-            placeholder="fx jensjensen@gmail.com"
-            type="email"
-            id="email"
-            name="email"
-            required
-          />
+            <label for="email">E-mail</label>
+            <input
+              placeholder="fx jensjensen@gmail.com"
+              type="email"
+              id="email"
+              name="email"
+              required
+            />
 
-          <button type="submit">Tilmeld</button>
-        </form>
+            <button type="submit">Tilmeld</button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
