--- a/deciduous.html
+++ b/deciduous.html
@@ -120,15 +120,15 @@
         </div>
         <div class="nyhedsbrev">
           <form>
-            Nyhedsbrev
+            Newsletter
             <select name="liste">
-              <option value="">Vælg profil</option>
-              <option value="studerende">Studerende</option>
-              <option value="underviser">Underviser</option>
+              <option value="">Choose profile</option>
+              <option value="studerende">Student</option>
+              <option value="underviser">Teacher</option>
             </select>
-            <label for="navn">Fulde navn</label>
+            <label for="navn">Full name</label>
             <input
-              placeholder="fx Jens Jensen"
+              placeholder="e.g. Jens Jensen"
               type="text"
               id="navn"
               name="navn"
@@ -137,14 +137,14 @@
 
             <label for="email">E-mail</label>
             <input
-              placeholder="fx jensjensen@gmail.com"
+              placeholder="e.g. jensjensen@gmail.com"
               type="email"
               id="email"
               name="email"
               required
             />
 
-            <button type="submit">Tilmeld</button>
+            <button type="submit">Subscibe</button>
           </form>
         </div>
       </div>
