--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <h2 class="forsideh2">Forrests</h2>
 
         <div class="skove">
-            <img src="img/skov_1.webp" alt="Skov">
-            <img src="img/skov_2.webp" alt="Skov">
+            <img class="skove_forside" src="img/skov_1.webp" alt="Skov">
+            <img class="skove_forside" src="img/skov_2.webp" alt="Skov">
         </div>
 
     </main>
