--- a/coniferous.html
+++ b/coniferous.html
@@ -32,65 +32,64 @@
             </ul>
         </nav>
     </header>
-
-
-
-    <div class="section">
-        <img src="img/blok.webp" alt="blok" class="background">
-        <img src="img/stick.png" alt="" class="foreground">
-        <img src="img/stick_2.png" alt="" class="foreground_2">
-        <img src="img/flower.png" alt="" class="foreground_3">
-        <img src="img/flower_1.png" alt="" class="foreground_4">
-    </div>
-    <div class="text_felt">
-        <h1 class="name">CONIFEROUS FOREST</h1>
-        <p class="information">Coniferous forests in Denmark are cultivated, often to prevent sand from drifting or
-            eroding. Well adapted to sandy, nutrient-poor soil, conifers transform the forest floor by dropping their
-            needles. The high acidity of spruce needles curbs earthworms and aids the decomposition of organic material,
-            making the floor of a coniferous forest perfect for mushrooms. You can also find some berries and herbs that
-            have adapted to the acidic, nutrient-poor environment.</p>
-    </div>
-    <div class="plants_selector">
-        <h1>PLANTS</h1>
-        <h2>SORTED BY</h2>
-        <div class="selector">
-            <div>
-                <label for="month"></label>
-                <select id="month" name="month">
-                    <option value="-1">Select month</option>
-                    <option value="0">January</option>
-                    <option value="1">February</option>
-                    <option value="2">March</option>
-                    <option value="3">April</option>
-                    <option value="4">May</option>
-                    <option value="5">June</option>
-                    <option value="6">July</option>
-                    <option value="7">August</option>
-                    <option value="8">September</option>
-                    <option value="9">October</option>
-                    <option value="10">November</option>
-                    <option value="11">December</option>
-                </select>
+    <main class="grid1-1">
+        <div>
+            <div class="text_felt">
+                <h1 class="name">CONIFEROUS FOREST</h1>
+                <p class="information">Coniferous forests in Denmark are cultivated, often to prevent sand from drifting or
+                    eroding. Well adapted to sandy, nutrient-poor soil, conifers transform the forest floor by dropping their
+                    needles. The high acidity of spruce needles curbs earthworms and aids the decomposition of organic material,
+                    making the floor of a coniferous forest perfect for mushrooms. You can also find some berries and herbs.</p>
             </div>
-            <div id="items-container"></div>
-            <h2 class="alphabetical_button">a-z</h2>
         </div>
-    </div>
-
-    <main></main>
-
-    <article class="plants_by">
-        <div class="col_1"></div>
-        <div class="col_2"></div>
-        <template>
-            <section class="planter">
-                <article class="plants_by_1">
-                    <img src="img/baggrund_1.png" alt="" class="billede_prøve">
-                    <div class="des"><a href="plant.html">PLANT</a></div>
-                </article>
-            </section>
-        </template>
-    </article>
+        <div>
+            <div class="plants_selector">
+                <h1>PLANTS</h1>
+                <h2>SORTED BY</h2>
+                <div class="selector">
+                    <div>
+                        <label for="month"></label>
+                        <select id="month" name="month">
+                            <option value="-1">Select month</option>
+                            <option value="0">January</option>
+                            <option value="1">February</option>
+                            <option value="2">March</option>
+                            <option value="3">April</option>
+                            <option value="4">May</option>
+                            <option value="5">June</option>
+                            <option value="6">July</option>
+                            <option value="7">August</option>
+                            <option value="8">September</option>
+                            <option value="9">October</option>
+                            <option value="10">November</option>
+                            <option value="11">December</option>
+                        </select>
+                    </div>
+                    <div id="items-container"></div>
+                    <h2 class="alphabetical_button">a-z</h2>
+                </div>
+            </div>
+            <article class="plants_by">
+                <div class="col_1"></div>
+                <div class="col_2"></div>
+                <template>
+                    <section class="planter">
+                        <article class="plants_by_1">
+                            <img src="img/baggrund_1.png" alt="" class="billede_prøve">
+                            <div class="des"><a href="plant.html">PLANT</a></div>
+                        </article>
+                    </section>
+                </template>
+            </article>
+            <div class="section">
+                <img src="img/blok.webp" alt="blok" class="background">
+                <img src="img/stick.png" alt="" class="foreground">
+                <img src="img/stick_2.png" alt="" class="foreground_2">
+                <img src="img/flower.png" alt="" class="foreground_3">
+                <img src="img/flower_1.png" alt="" class="foreground_4">
+            </div>
+        </div>
+    </main>
 
 
     <footer>
