--- a/deciduous.html
+++ b/deciduous.html
@@ -32,65 +32,60 @@
             </ul>
         </nav>
     </header>
-
-
-
-    <div class="section">
-        <img src="img/blok.webp" alt="blok" class="background">
-        <img src="img/stick.png" alt="" class="foreground">
-        <img src="img/stick_2.png" alt="" class="foreground_2">
-        <img src="img/flower.png" alt="" class="foreground_3">
-        <img src="img/flower_1.png" alt="" class="foreground_4">
-    </div>
-
-    <div class="text_felt">
-        <h1 class="name">DECIDUOUS FOREST</h1>
-        <p class="information">The tree canopy blocks out much of the sunlight in deciduous forests, especially in
-            summer, making the foraging opportunities rather sparse. Spring and fall, however, offer many edible
-            options, from early wild herbs like ramson and sweet woodruff, to late summer's selection of berries and
-            edible flowers, to autumn's wealth of mushrooms, fruit, and nuts.</p>
-    </div>
-
-
-    <div class="plants_selector">
-        <h1>PLANTS</h1>
-        <h2>SORTED BY</h2>
-        <div class="selector">
-            <div>
-                <label for="month"></label>
-                <select id="month" name="month">
-                    <option value="-1">Select month</option>
-                    <option value="0">January</option>
-                    <option value="1">February</option>
-                    <option value="2">March</option>
-                    <option value="3">April</option>
-                    <option value="4">May</option>
-                    <option value="5">June</option>
-                    <option value="6">July</option>
-                    <option value="7">August</option>
-                    <option value="8">September</option>
-                    <option value="9">October</option>
-                    <option value="10">November</option>
-                    <option value="11">December</option>
-                </select>
+    <main class="grid1-1">
+        <div>
+            <div class="text_felt">
+                <h1 class="name">DECIDUOUS FOREST</h1>
+                <p class="information">In the deciduous forest, the tree canopies block out a lot of sunlight - especially in the summer months, when the yield of a foraging trip in the deciduous forest can be quite meager. Spring and autumn offer several edible experiences - from the year's first wild herbs like ramson and sweet woodruff, to late summer's selection of berries and edible flowers, and autumn's abundance of mushrooms, fruits, and nuts.</p>
             </div>
-            <div id="items-container"></div>
-            <h2 class="alphabetical_button">a-z</h2>
         </div>
-    </div>
-    <article class="plants_by">
-        <div class="col_1"></div>
-        <div class="col_2"></div>
-        <template>
-            <section class="planter">
-                <div class="plants_by_1">
-                    <img src="img/baggrund_1.png" alt="" class="billede_prøve">
-                    <div class="des"><a href="plant.html"></a></div>
+        <div>
+            <div class="plants_selector">
+                <h1>PLANTS</h1>
+                <h2>SORTED BY</h2>
+                <div class="selector">
+                    <div>
+                        <label for="month"></label>
+                        <select id="month" name="month">
+                            <option value="-1">Select month</option>
+                            <option value="0">January</option>
+                            <option value="1">February</option>
+                            <option value="2">March</option>
+                            <option value="3">April</option>
+                            <option value="4">May</option>
+                            <option value="5">June</option>
+                            <option value="6">July</option>
+                            <option value="7">August</option>
+                            <option value="8">September</option>
+                            <option value="9">October</option>
+                            <option value="10">November</option>
+                            <option value="11">December</option>
+                        </select>
+                    </div>
+                    <div id="items-container"></div>
+                    <h2 class="alphabetical_button">a-z</h2>
                 </div>
-            </section>
-        </template>
-    </article>
-
+            </div>
+            <article class="plants_by">
+                <div class="col_2"></div>
+                <template>
+                    <section class="planter">
+                        <div class="plants_by_1">
+                            <img src="img/baggrund_1.png" alt="" class="billede_prøve">
+                            <div class="des"><a href="plant.html"></a></div>
+                        </div>
+                    </section>
+                </template>
+            </article>
+              <div class="section">
+                <img src="img/blok.webp" alt="blok" class="background">
+                <img src="img/stick.png" alt="" class="foreground">
+                <img src="img/stick_2.png" alt="" class="foreground_2">
+                <img src="img/flower.png" alt="" class="foreground_3">
+                <img src="img/flower_1.png" alt="" class="foreground_4">
+            </div>
+        </div>
+    </main>
     <footer>
         <div class="foot">
             <div class="project">
