--- a/plant.html
+++ b/plant.html
@@ -23,8 +23,9 @@
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
+            <img src="img/logo.png" alt="" id="logo" />
+
             <ul class="menu">
-                <img src="img/logo.png" alt="" id="logo">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="coniferous.html">Coniferous forest</a></li>
                 <li><a href="deciduous.html">Deciduous forest</a></li>
