--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,8 @@
           <div class="bar"></div>
           <div class="bar"></div>
         </div>
+        <img src="img/logo.png" alt="" id="logo" />
+
         <ul class="menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="coniferous.html">Coniferous forest</a></li>
