--- a/season.html
+++ b/season.html
@@ -28,6 +28,8 @@
           <div class="bar"></div>
           <div class="bar"></div>
         </div>
+        <img src="img/logo.png" alt="" id="logo" />
+
         <ul class="menu">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
